// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcInputField renders properly the icon when disabled 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-37"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!---->
    </span>
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input ec-input-field__input--has-icon"
    data-test="ec-input-field__input"
    disabled="disabled"
    id="ec-input-field-37"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--is-disabled"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-check"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;

exports[`EcInputField renders properly when disabled 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-35"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!---->
    </span>
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    disabled="disabled"
    id="ec-input-field-35"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField renders properly when the labelTooltip prop is set 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-40"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <svg
        class="ec-input-field__tooltip ec-icon ec-icon--interactive ec-has-tooltip"
        data-original-title="null"
        data-test="ec-input-field__tooltip"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-simple-info"
        />
      </svg>
    </span>
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-40"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField renders properly with the errorId from the parent 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-11"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!---->
    </span>
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    aria-describedby="error-id-test"
    class="ec-input-field__input ec-input-field__input--has-error"
    data-test="ec-input-field__input"
    id="ec-input-field-11"
    type="text"
  />
   
  <!---->
   
  <div
    class="ec-input-field__error-text"
    data-test="ec-input-field__error-text"
    id="error-id-test"
  >
    Test error message
  </div>
</div>
`;

exports[`EcInputField renders properly with the given prop errorMessage 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-5"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!---->
    </span>
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    aria-describedby="ec-input-field-error-5"
    class="ec-input-field__input ec-input-field__input--has-error"
    data-test="ec-input-field__input"
    id="ec-input-field-5"
    type="text"
  />
   
  <!---->
   
  <div
    class="ec-input-field__error-text"
    data-test="ec-input-field__error-text"
    id="ec-input-field-error-5"
  >
    error msg
  </div>
</div>
`;

exports[`EcInputField renders properly with the id from the parent 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="id-test"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!---->
    </span>
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="id-test"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField renders properly without label 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-13"
  >
    <!---->
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-13"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField renders properly without note 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-15"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!---->
    </span>
     
    <!---->
  </label>
   
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-15"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField renders properly without the error when the prop errorMessage is given and the isInGroup prop is not empty 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-7"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!---->
    </span>
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    aria-describedby="ec-input-field-error-7"
    class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-error"
    data-test="ec-input-field__input"
    id="ec-input-field-7"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField renders with the attrs min and max 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-17"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!---->
    </span>
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-17"
    max="10"
    min="5"
    type="number"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField should display properly with the given props 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-3"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!---->
    </span>
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-3"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField should render given icon 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-27"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!---->
    </span>
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input ec-input-field__input--has-icon"
    data-test="ec-input-field__input"
    id="ec-input-field-27"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-check"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;

exports[`EcInputField should render given icon with given size 1`] = `
<div
  class="ec-input-field__icon-wrapper"
  data-test="ec-input-field__icon-wrapper"
>
  <svg
    class="ec-input-field__icon ec-icon"
    data-test="ec-input-field__icon"
    height="40"
    width="40"
  >
    <use
      xlink:href="#ec-simple-check"
    />
  </svg>
</div>
`;
